--- a/media.css
+++ b/media.css
@@ -65,18 +65,33 @@
    }
 
     /* hero section */
-
+    div.hero-section {
+        padding: 3.5rem;
+    }
+   
+    div.hero-content-heading{
+      display: flex;
+      flex-direction: column;
+      text-align: center;
+      align-items: center;
+      justify-content: center; 
+    }
+     
     div.hero-content-heading h3 {
-        font-size: 1.8rem;
-        align-items: center;
+        font-size: 1.4rem;
+        align-items: justify;
         font-weight: 280;
     }
      
     div.hero-content-heading p {
         font-size: 0.8rem;
-        letter-spacing: 1.5px;
-        font-size: 0.8rem;
+        letter-spacing: normal;
     }
+    div.hero-content-btn a{
+        letter-spacing: normal;
+        text-align: center ;
+    }
+
     /* hero sub section */
 
     div.snapshot-box-content {
